# yolo11_lib

./: CMakeLists.txt  print_names.py
examples/: main.cpp
include/: YOLODetector.h
src/: YOLODetector.cpp
